organisation page html + liens corrects

--- a/html/INDEX/3d.html
+++ b/html/INDEX/3d.html
@@ -2,32 +2,32 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8"/>
-		<link rel="icon" href="../icon.ico" />
+		<link rel="icon" href="../../icon.ico" />
 		<meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie"/>
 		<meta name=”viewport” content=”width=device-width, initial-scale=1>
 
 		<title>Alvina Damasio--Razafiarizaka | Projets Perso</title>
 
-        <link rel="stylesheet" href="../css/style.css" id="theme-link">
-        <link rel="stylesheet" href="../css/photomontage.css">
-		<link rel="stylesheet" href="../css/flickity.css">
+        <link rel="stylesheet" href="../../css/style.css" id="theme-link">
+        <link rel="stylesheet" href="../../css/photomontage.css">
+		<link rel="stylesheet" href="../../css/flickity.css">
 
 	    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-	    <script src="../js/flickity.pkgd.js"></script>
+	    <script src="../../js/flickity.pkgd.js"></script>
 	    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 <!--------------------------------------------------------- MENU ------------------------------------------------------>
 <div class="navbar">
 	<div class="haut">
-		<a class="icone" href="../index.html"> <img  src="../RESSOURCES/a.png" width="100%"/></a>
+		<a class="icone" href="../../index.html"> <img  src="../../RESSOURCES/a.png" width="100%"/></a>
 		<h1 class="prénom">Alvina<h1>
 		<h2 class="nom">Damasio--Razafiarizaka<h2>
 	</div>	
 	<ul>
-		<li><a href="../index.html">ACCUEIL</a></li>
-		<li><a href="../i - dut mmi.html">DUT MMI</a></li>
-		<li><a href="../i - projets perso.html">PROJETS PERSO</a></li>
+		<li><a href="../../index.html">ACCUEIL</a></li>
+		<li><a href="../../html/dut mmi.html">DUT MMI</a></li>
+		<li><a href="../../i - projets perso.html">PROJETS PERSO</a></li>
 	</ul>
 </div>
 <!---------------------------------------------- CARROUSSEL PHOTOMONTAGES ------------------------------------------------>
@@ -39,14 +39,13 @@
 </div>
 
 <div class="photomontage_total"> 
-    <img class="photomontage_image" src="../RESSOURCES/0 - Photomontages/P1.jpg" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie."/>
-    <img class="photomontage_image" src="../RESSOURCES/0 - Photomontages/P2.jpg" alt="Photomontage d'un vaisseau en train de s'écraser sur une planète inconnue. Soleil, flammes, sable, violet."/>
-    <img class="photomontage_image" src="../RESSOURCES/0 - Photomontages/P3.jpg"/>
-    <img class="photomontage_image" src="../RESSOURCES/0 - Photomontages/P4.jpg"/>
-    <img class="photomontage_image" src="../RESSOURCES/0 - Photomontages/P5.jpg"/>
-    <img class="photomontage_image" src="../RESSOURCES/0 - Photomontages/P6.jpg"/>
-    <img class="photomontage_image" src="../RESSOURCES/0 - Photomontages/P7.jpg"/>
-    <img class="photomontage_image" src="../RESSOURCES/0 - Photomontages/P8.jpg"/>
+    <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Nasa Milk 1.jpg"/>
+    <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Araignée.jpg"/>
+    <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Voiture.jpg"/>
+    <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Nasa Milk 2.jpg"/>
+    <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Old.jpg"/>
+    <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Tardis.jpg"/>
+    <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Chambre.jpg"/>
 </div>
 <!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
 <section class="social_menu">
