--- a/html/INDEX/photographie.html
+++ b/html/INDEX/photographie.html
@@ -8,45 +8,55 @@
 
 		<title>Alvina Damasio--Razafiarizaka | Projets Perso</title>
 
-        <link rel="stylesheet" href="../css/style.css" id="theme-link">
-        <link rel="stylesheet" href="../css/photomontage.css">
-		<link rel="stylesheet" href="../css/flickity.css">
+		<link rel="stylesheet" href="../../css/style.css" id="theme-link">
+		<link rel="stylesheet" href="../../css/flickity.css">
 
 	    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-	    <script src="../js/flickity.pkgd.js"></script>
+	    <script src="../../js/flickity.pkgd.js"></script>
 	    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 <!--------------------------------------------------------- MENU ------------------------------------------------------>
 <div class="navbar">
 	<div class="haut">
-		<a class="icone" href="../index.html"> <img  src="../RESSOURCES/a.png" width="100%"/></a>
+		<a class="icone" href="../../index.html"> <img  src="../../RESSOURCES/a.png" width="100%"/></a>
 		<h1 class="prénom">Alvina<h1>
 		<h2 class="nom">Damasio--Razafiarizaka<h2>
 	</div>	
 	<ul>
-		<li><a href="../index.html">ACCUEIL</a></li>
-		<li><a href="../i - dut mmi.html">DUT MMI</a></li>
-		<li><a href="../i - projets perso.html">PROJETS PERSO</a></li>
+		<li><a href="../../index.html">ACCUEIL</a></li>
+		<li><a href="../../html/dut mmi.html">DUT MMI</a></li>
+		<li><a href="../../html/projets perso.html">PROJETS PERSO</a></li>
 	</ul>
 </div>
 <!---------------------------------------------- CARROUSSEL PHOTOMONTAGES ------------------------------------------------>
 
-
-
 <div class="presentation_dut_mmi_case">
-	<p class="presentation_text">J'utilise photoshop depuis que j'ai onze ans et avec le temps j'ai commencé à réaliser des illustrations. Chacune d'elles raconte une histoire, même si dans la plupart des cas il n'y a que la couverture d'un livre.</p>
+	<p class="presentation_text">Voilà quelques photos que j'ai prise.</p>
 </div>
 
-<div class="photomontage_total"> 
-    <img class="photomontage_image" src="../RESSOURCES/0 - 3D/Nasa Milk 1.jpg"/>
-    <img class="photomontage_image" src="../RESSOURCES/0 - 3D/Araignée.jpg"/>
-    <img class="photomontage_image" src="../RESSOURCES/0 - 3D/Voiture.jpg"/>
-    <img class="photomontage_image" src="../RESSOURCES/0 - 3D/Nasa Milk 2.jpg"/>
-    <img class="photomontage_image" src="../RESSOURCES/0 - 3D/Old.jpg"/>
-    <img class="photomontage_image" src="../RESSOURCES/0 - 3D/Tardis.jpg"/>
-    <img class="photomontage_image" src="../RESSOURCES/0 - 3D/Chambre.jpg"/>
+
+<!--------------------------------------------------- PHOTOGRAPHIES ------------------------------------------------>
+<div class="gallerie">
+<div class="DUT_MMI_case">
+			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I1.jpg"/></a> 
+			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I2.jpg"/></a>
+			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I16.jpg"/></a>
 </div>
+<div class="DUT_MMI_case">
+			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I3.jpg"/></a>
+</div>
+<div class="DUT_MMI_case">
+			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I4.jpg"/></a> 
+			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I6.jpg"/></a>
+</div>
+<div class="DUT_MMI_case">
+			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I7.jpg"/></a> 
+			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I8.png"/></a>
+			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I10.jpg"/></a>
+</div>
+</div>
+
 <!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
 <section class="social_menu">
 	<!------------------ ICONES RÉSEAUX -->
