--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 			</div>	
 			<ul>
 				<li><a id="page_actuelle" href="index.html">ACCUEIL</a></li>
- 				<li><a href="i - dut mmi.html">DUT MMI</a></li>
- 				<li><a href="i - projets perso.html">PROJETS PERSO</a></li>
+ 				<li><a href="./html/dut mmi.html">DUT MMI</a></li>
+ 				<li><a href="../i - projets perso.html">PROJETS PERSO</a></li>
 			</ul>
 		</div>
 <!------------------------------------------------------ PROJETS ------------------------------------------------>
@@ -42,15 +42,15 @@
 			<img class="scroll_down" src="./RESSOURCES/scroll_down.png"/>
 	</div>
 		<div class="photomontage_bande">
-			<a class="lien_image" href="./html/photomontage.html">
+			<a class="lien_image" href="./html/INDEX/photomontage.html">
 				<img class="couverture" src="./RESSOURCES/Couverture_Photomontage.jpg"/>
 				<p class="category_title"><span class="contour"> | </span>PHOTOMONTAGE<span class="contour"> | </span></p>
 			</a>
-			 <a class="lien_image" href="./html/3d.html">
+			 <a class="lien_image" href="./html/INDEX/3d.html">
 				 <img class="couverture" src="./RESSOURCES/Couverture_3D.jpg"/>
 				 <p class="category_title"><span class="contour"> | </span>3D<span class="contour"> | </span></p>
 			</a>
-			 <a class="lien_image" href="./html/photographie.html">
+			 <a class="lien_image" href="./html/INDEX/photographie.html">
 				<img class="couverture" src="./RESSOURCES/Couverture_Photographie.jpg"/>
 				<p class="category_title"><span class="contour"> | </span>PHOTOGRAPHIE<span class="contour"> | </span></p>
 			</a>
