--- a/html/DUT MMI/scratch.html
+++ b/html/DUT MMI/scratch.html
@@ -2,17 +2,17 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8"/>
-		<link rel="icon" href="icon.ico" />
+		<link rel="icon" href="../../icon.ico" />
 		<meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie"/>
 		<meta name=”viewport” content=”width=device-width, initial-scale=1>
 
 		<title>Alvina Damasio--Razafiarizaka | Projets Perso</title>
 
-		<link rel="stylesheet" href="css/style.css" id="theme-link">
-		<link rel="stylesheet" href="css/flickity.css">
+		<link rel="stylesheet" href="../../css/style.css" id="theme-link">
+		<link rel="stylesheet" href="../../css/flickity.css">
 
 	    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-	    <script src="js/flickity.pkgd.js"></script>
+	    <script src="../../js/flickity.pkgd.js"></script>
 	    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
 	</head>
 
@@ -20,22 +20,16 @@
 <!--------------------------------------------------------- MENU ------------------------------------------------------>
 <div class="navbar">
 	<div class="haut">
-		<a class="icone" href="index.html"> <img  src="RESSOURCES/a.png" width="100%"/></a>
+		<a class="icone" href="../../index.html"> <img  src="../../RESSOURCES/a.png" width="100%"/></a>
 		<h1 class="prénom">Alvina<h1>
 		<h2 class="nom">Damasio--Razafiarizaka<h2>
 	</div>	
 	<ul>
-		<li><a id="page_actuelle" href="index.html">ACCUEIL</a></li>
-		 <li><a href="i - dut mmi.html">DUT MMI</a></li>
-		 <li><a href="i - projets perso.html">PROJETS PERSO</a></li>
+		<li><a href="../../index.html">ACCUEIL</a></li>
+		 <li><a href="../../html/dut mmi.html">DUT MMI</a></li>
+		 <li><a href="../../projets perso.html">PROJETS PERSO</a></li>
 	</ul>
 </div>
-<!--------------------------------------------------------- INFOGRAPHIE ------------------------------------------------------>
-<div class="Section_Projet_case">
-	<h3 class="Section_Projet_title">Jeu Scratch</h3>
-</div>
-
-
 <!----------------------------------------------------------- ATELIER ------------------------------------------------------->
 <div class="row_simple">
 	<div class="column_simple" id="half">
@@ -43,12 +37,12 @@
 		<p class="explication_text">Après plusieurs heures de brainstorming nous avons décidé avec mon équipe de réaliser un jeu à la "Five Nights at Freddy's". Pour coller au thème qui était "Jamais 203", nous avons décidé de placer le joueur dans sa chambre d'hôtel n°203. Là, il est capable de regarder à travers la ventilation, par la fenêtre et par l'oeillet de la porte. Le but est de survivre toute la nuit sans être attaqué par les monstres qui se rapprochent peu à peu. Pour cela le joueur a plusieurs moyens de les repousser ou de les retenir.</p>
 	</div>
 	<div class="column-simple video" id="half">
-		<img class="gallerie_image" src="RESSOURCES/2 - Scratch/Animation Fenetre.gif"/>
+		<img class="gallerie_image" src="../../RESSOURCES/2 - Scratch/Animation Fenetre.gif"/>
 	</div>
 </div>
 <div class="row_simple">
 	<div class="column-simple video" id="half">
-		<img class="gallerie_image" src="RESSOURCES/2 - Scratch/Animation Chambre.gif"/>
+		<img class="gallerie_image" src="../../RESSOURCES/2 - Scratch/Animation Chambre.gif"/>
 	</div>
 	<div class="column_simple" id="half">
 		<p class="explication_text">Le joueur dispose d'une télécommande qui lui permet de contrôler la ventilation (à droite au-dessus du lit) ou de verrouiller la porte (au fond de la pièce). Si la ventilation est en marche, le monstre est bloqué là-bas, si la porte est fermée même chose. Le problème, c'est que pour réaliser ces deux actions, le joueur n'a qu'une quantité d'énergie limitée, une fois épuisée, la ventilation s'arrête et le verrou de la porte s'ouvre.</p>
@@ -62,19 +56,18 @@
 		<p class="explication_text">Bref, s'il veut survivre toute la nuit le joueur doit être intelligent dans sa gestion des ressources. Ça c'est le jeu mais côté création c'était comment ?</p>
 	</div>
 	<div class="column-simple video" id="half">
-		<img class="gallerie_image" src="RESSOURCES/2 - Scratch/Animation Ventilation.gif"/>
+		<img class="gallerie_image" src="../../RESSOURCES/2 - Scratch/Animation Ventilation.gif"/>
 	</div>
 </div>
 		<p class="explication_text">Personnellement je me suis occupée de toute la partie design du jeu. Pour l'apparence des monstres on a décidé de reprendre celle du Silence dans Doctor Who (une célèbre série de science-fiction britannique). Après quelques modifications sur différents modèles nous avions les créatures dans plusieurs positions. J'ai réalisé toutes les scènes où se trouverait le joueur puis j'ai conçu des animations pour rendre le jeu plus immersif.</p>
 <!----------------------------------------------------------- IMAGES -------------------------------------------------------->
 <div class="carousel" data-flickity>
   <!-- foreground parallax layer -->
-    <div class="carousel-cell"><img src="RESSOURCES/2 - Scratch/Ecran titre.jpg" width="100%" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie."/></div>
-    <div class="carousel-cell"><img src="RESSOURCES/2 - Scratch/Demo.jpg" width="100%" alt="Photomontage d'un vaisseau en train de s'écraser sur une planète inconnue. Soleil, flammes, sable, violet."/></div>
-    <div class="carousel-cell"><img src="RESSOURCES/2 - Scratch/Animation Screamer Couloir.gif" width="100%"/></div>
-    <div class="carousel-cell"><img src="RESSOURCES/2 - Scratch/SCREAMER CHAMBRE S.png" width="100%"/></div>
-    <div class="carousel-cell"><img src="RESSOURCES/2 - Scratch/SCREAMER FENETRE S.png" width="100%"/></div>
-    <div class="carousel-cell"><img src="RESSOURCES/1 - Infographie/RENDU 6.1.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="../../RESSOURCES/2 - Scratch/Ecran titre.jpg" width="100%" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie."/></div>
+    <div class="carousel-cell"><img src="../../RESSOURCES/2 - Scratch/Demo.jpg" width="100%" alt="Photomontage d'un vaisseau en train de s'écraser sur une planète inconnue. Soleil, flammes, sable, violet."/></div>
+    <div class="carousel-cell"><img src="../../RESSOURCES/2 - Scratch/Animation Screamer Couloir.gif" width="100%"/></div>
+    <div class="carousel-cell"><img src="../../RESSOURCES/2 - Scratch/SCREAMER CHAMBRE S.png" width="100%"/></div>
+    <div class="carousel-cell"><img src="../../RESSOURCES/2 - Scratch/SCREAMER FENETRE S.png" width="100%"/></div>
 </div>
 
 <!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
