modif page dut mmi + infographie

--- a/html/DUT MMI/infographie.html
+++ b/html/DUT MMI/infographie.html
@@ -2,13 +2,14 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8"/>
-		<link rel="icon" href="icon.ico" />
+		<link rel="icon" href="../../icon.ico" />
 		<meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie"/>
 		<meta name=”viewport” content=”width=device-width, initial-scale=1>
 
 		<title>Alvina Damasio--Razafiarizaka | Projets Perso</title>
 
 		<link rel="stylesheet" href="../../css/style.css" id="theme-link">
+		<link rel="stylesheet" href="../../css/dut mmi.css">
 		<link rel="stylesheet" href="../../css/flickity.css">
 
 	    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
@@ -52,11 +53,11 @@
 		<iframe width="650" height="400" class="video" src="https://www.youtube.com/embed/JyeG7LvVOWo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</div>
 </div>
-<div class="DUT_MMI_case">
-			<a class="DUT_MMI_a"> <img class="gallerie_image" src="../../RESSOURCES/1 - Infographie/COVER 1.1.jpg"/></a> 
-			<a class="DUT_MMI_a"> <img class="gallerie_image" src="../../RESSOURCES/1 - Infographie/BACK COVER 1.2.jpg"/></a>
-			<a class="DUT_MMI_a"> <img class="gallerie_image" src="../../RESSOURCES/1 - Infographie/BOOKLET 1.1.png"/></a>
-			<a class="DUT_MMI_a"> <img class="gallerie_image" src="../../RESSOURCES/1 - Infographie/CD 1.3.png"/></a>
+<div class="dut_ligne_case">
+			<a class="dut_projet"> <img class="dut_projet_image" src="../../RESSOURCES/1 - Infographie/COVER 1.1.jpg"/></a> 
+			<a class="dut_projet"> <img class="dut_projet_image" src="../../RESSOURCES/1 - Infographie/BACK COVER 1.2.jpg"/></a>
+			<a class="dut_projet"> <img class="dut_projet_image" src="../../RESSOURCES/1 - Infographie/BOOKLET 1.1.png"/></a>
+			<a class="dut_projet"> <img class="dut_projet_image" src="../../RESSOURCES/1 - Infographie/CD 1.3.png"/></a>
 </div>
 <div class="row_simple">
 	<div class="column-simple video" id="half">
