--- a/html/INDEX/photomontage.html
+++ b/html/INDEX/photomontage.html
@@ -63,10 +63,11 @@
         <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P6.jpg"/>
         <p class="date_photomontage"><span class="contour"> | </span>Janvier 2020<span class="contour"> | </span></p>
     </a>
-    <a class="lien_photomontage">	
+    <div class="lien_photomontage">	
         <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P7.jpg"/>
         <p class="date_photomontage"><span class="contour"> | </span>Septembre 2020<span class="contour"> | </span></p>
-    </a>
+        <a class="lien_projet" href="../DUT MMI/infographie.html"><span class="contour"> | </span>Voir le projet<span class="contour"> | </span></a>
+    </div>
     <a class="lien_photomontage">	
         <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P8.jpg"/>
         <p class="date_photomontage"><span class="contour"> | </span>Décembre 2020<span class="contour"> | </span></p>
