--- a/html/dut mmi.html
+++ b/html/dut mmi.html
@@ -10,6 +10,7 @@
 		<title>Alvina Damasio--Razafiarizaka | DUT MMI</title>
 
 		<link rel="stylesheet" href="../css/style.css" id="theme-link">
+		<link rel="stylesheet" href="../css/dut mmi.css">
 		<link rel="stylesheet" href="../flickity.css">
 
 	    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
@@ -25,8 +26,8 @@
 	</div>	
 	<ul>
 		<li><a href="../index.html">ACCUEIL</a></li>
-		 <li><a id="page_actuelle" href="../dut mmi.html">DUT MMI</a></li>
-		 <li><a href="../i - projets perso.html">PROJETS PERSO</a></li>
+		 <li><a id="page_actuelle" href="../html/dut mmi.html">DUT MMI</a></li>
+		 <li><a href="../html/presentation.html">PRÉSENTATION</a></li>
 	</ul>
 </div>
 <!--------------------------------------------------- GALERIE PROJETS ------------------------------------------------------>
@@ -35,15 +36,37 @@
 		<p class="presentation_text">En 2020, j'ai intégré le DUT Métiers du Multimédia et de l'Internet de l'IUT Bordeaux Montaigne. Durant toute l'année nous avons réalisé une foule de projets. Découvrez-les sur cette page !</p>
 	</div>
 
-	<div class="DUT_MMI_case">
-		<div class="DUT_MMI_image_case"><p class="DUT_MMI_image_titre">Infographie : Couverture d'Album</p><a class="DUT_MMI_a" href="../html/DUT MMI/infographie.html"><img class="DUT_MMI_image" src="../RESSOURCES/Projets MMI - Cover Album.jpg"/></a></div>
-		<div class="DUT_MMI_image_case"><p class="DUT_MMI_image_titre">Jeu vidéo : Atelier Scratch</p><a class="DUT_MMI_a" href="../html/DUT MMI/scratch.html"> <img class="DUT_MMI_image" src="../RESSOURCES/Projets MMI - Jeu Scratch.jpg"/></a></div>
-		<div class="DUT_MMI_image_case"><p class="DUT_MMI_image_titre">Web Design : Musée d'Aquitaine</p><a class="DUT_MMI_a" href="../html/dut mmi.html"> <img class="DUT_MMI_image" src="../RESSOURCES/Projets MMI - Site Web.jpg"/></a></div>
+	<div class="dut_ligne_case">
+		<a class="dut_projet" href="../html/DUT MMI/infographie.html">
+			<img class="dut_projet_image" src="../RESSOURCES/Projets MMI - Cover Album.jpg"/>
+			<p class="DUT_MMI_image_titre"><span class="contour"> | </span>Infographie : Couverture d'Album<span class="contour"> | </span></p>
+		</a>			
+
+		<a class="dut_projet" href="../html/DUT MMI/scratch.html">
+			<img class="dut_projet_image" src="../RESSOURCES/Projets MMI - Jeu Scratch.jpg"/>
+			<p class="DUT_MMI_image_titre"><span class="contour"> | </span>Jeu vidéo : Atelier Scratch<span class="contour"> | </span></p>
+		</a>
+		<a class="dut_projet" href="../html/dut mmi.html"> 
+			<img class="dut_projet_image" src="../RESSOURCES/Projets MMI - Site Web.jpg"/>
+			<p class="DUT_MMI_image_titre"><span class="contour"> | </span>Web Design : Musée d'Aquitaine<span class="contour"> | </span></p>
+		</a>
 	</div>
-	<div class="DUT_MMI_case">
-		<div class="DUT_MMI_image_case"><p class="DUT_MMI_image_titre">Jeu vidéo : Zelda Like</p><a class="DUT_MMI_a" href="../html/dut mmi.html"><img class="DUT_MMI_image" src="../RESSOURCES/Projets MMI - Zelda Like.jpg"/></a></div>
-		<div class="DUT_MMI_image_case"><p class="DUT_MMI_image_titre">Motion Design : Théorie du Petit Monde</p><a class="DUT_MMI_a" href="../html/dut mmi.html"> <img class="DUT_MMI_image" src="../RESSOURCES/Projets MMI - TIC.jpg"/></a></div>
-		<div class="DUT_MMI_image_case"><p class="DUT_MMI_image_titre">Musique : Lo-fi</p><a class="DUT_MMI_a" href="../html/dut mmi.html"> <img class="DUT_MMI_image" src="../RESSOURCES/Projets MMI - Musique.jpg"/></a></div>
+
+	<div class="dut_ligne_case">
+		<a class="dut_projet" href="../html/dut mmi.html">
+			<img class="dut_projet_image" src="../RESSOURCES/Projets MMI - Zelda Like.jpg"/>
+			<p class="DUT_MMI_image_titre"><span class="contour"> | </span>Jeu vidéo : Zelda Like<span class="contour"> | </span></p>
+		</a>
+
+		<a class="dut_projet" href="../html/dut mmi.html">
+			<img class="dut_projet_image" src="../RESSOURCES/Projets MMI - TIC.jpg"/>
+			<p class="DUT_MMI_image_titre"><span class="contour"> | </span>Motion Design : Théorie du Petit Monde<span class="contour"> | </span></p>
+		</a>
+
+		<a class="dut_projet" href="../html/dut mmi.html">
+			<img class="dut_projet_image" src="../RESSOURCES/Projets MMI - Musique.jpg"/>
+			<p class="DUT_MMI_image_titre"><span class="contour"> | </span>Musique : Lo-fi<span class="contour"> | </span></p>
+	</a>
 	</div>
 
 	<!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
