--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<ul>
 				<li><a id="page_actuelle" href="index.html">ACCUEIL</a></li>
  				<li><a href="./html/dut mmi.html">DUT MMI</a></li>
- 				<li><a href="../i - projets perso.html">PROJETS PERSO</a></li>
+ 				<li><a href="./html/presentation.html">PRÉSENTATION</a></li>
 			</ul>
 		</div>
 <!------------------------------------------------------ PROJETS ------------------------------------------------>
@@ -54,18 +54,22 @@
 				<img class="couverture" src="./RESSOURCES/Couverture_Photographie.jpg"/>
 				<p class="category_title"><span class="contour"> | </span>PHOTOGRAPHIE<span class="contour"> | </span></p>
 			</a>
-			<a class="lien_image" href="i - dut mmi.html">
+			<a class="lien_image" href="/html/dut mmi.html">
 				 <img class="couverture" src="./RESSOURCES/Couverture_Jeu_Vidéo.jpg"/>
 				 <p class="category_title"><span class="contour"> | </span>JEU VIDÉO<span class="contour"> | </span></p>
 			</a>
 			<a class="lien_image" href="./html/photographie.html">
-				<img class="couverture" src="./RESSOURCES/Couverture_Photographie.jpg"/>
+				<img class="couverture" src="./RESSOURCES/Couverture_Vidéo.jpg"/>
 				<p class="category_title"><span class="contour"> | </span>VIDÉOS<span class="contour"> | </span></p>
 			</a>
-			<a class="lien_image" href="i - dut mmi.html">
+			<a class="lien_image" href="/html/dut mmi.html">
 				 <img class="couverture" src="./RESSOURCES/Couverture_Web.jpg"/>
 				 <p class="category_title"><span class="contour"> | </span>WEB<span class="contour"> | </span></p>
 			</a>
+			<a class="lien_image" href="/html/dut mmi.html">
+				<img class="couverture" src="./RESSOURCES/Couverture_Ecriture.jpg"/>
+				<p class="category_title"><span class="contour"> | </span>ÉCRITURE<span class="contour"> | </span></p>
+		   </a>
 		</div>
 		
 <!---------------------------------------------- CARROUSSEL PHOTOMONTAGES -------------------------------------------------
