rectification page photographie + page video créée

--- a/html/INDEX/3d.html
+++ b/html/INDEX/3d.html
@@ -35,7 +35,7 @@
 
 
 <div class="presentation_dut_mmi_case">
-	<p class="presentation_text">J'utilise photoshop depuis que j'ai onze ans et avec le temps j'ai commencé à réaliser des illustrations. Chacune d'elles raconte une histoire, même si dans la plupart des cas il n'y a que la couverture d'un livre.</p>
+	<p class="presentation_text">La 3D m'a toujours intéressé parce qu'elle offre une autre dimension que le dessin, elle permet de vivre dans la scène. Voilà quelques rendus 3D et une modélisation du Tardis faits par mes soins.</p>
 </div>
 
 <div class="photomontage_total"> 
