--- a/html/INDEX/photographie.html
+++ b/html/INDEX/photographie.html
@@ -2,13 +2,14 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8"/>
-		<link rel="icon" href="../icon.ico" />
+		<link rel="icon" href="../../icon.ico" />
 		<meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie"/>
 		<meta name=”viewport” content=”width=device-width, initial-scale=1>
 
 		<title>Alvina Damasio--Razafiarizaka | Projets Perso</title>
 
 		<link rel="stylesheet" href="../../css/style.css" id="theme-link">
+		<link rel="stylesheet" href="../../css/dut mmi.css">
 		<link rel="stylesheet" href="../../css/flickity.css">
 
 	    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
@@ -29,31 +30,42 @@
 		<li><a href="../../html/projets perso.html">PROJETS PERSO</a></li>
 	</ul>
 </div>
-<!---------------------------------------------- CARROUSSEL PHOTOMONTAGES ------------------------------------------------>
 
-<div class="presentation_dut_mmi_case">
-	<p class="presentation_text">Voilà quelques photos que j'ai prise.</p>
-</div>
+
 
 
 <!--------------------------------------------------- PHOTOGRAPHIES ------------------------------------------------>
+<p class="presentation_text">Voilà quelques photos que j'ai prise.</p>
+
 <div class="gallerie">
-<div class="DUT_MMI_case">
-			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I1.jpg"/></a> 
-			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I2.jpg"/></a>
-			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I16.jpg"/></a>
+<div class="dut_ligne_case">
+			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I1.jpg"/></a> 
+			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I2.jpg"/></a>
+			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I16.jpg"/></a>
 </div>
-<div class="DUT_MMI_case">
-			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I3.jpg"/></a>
+<div class="dut_ligne_case">
+			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I3.jpg"/></a>
 </div>
-<div class="DUT_MMI_case">
-			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I4.jpg"/></a> 
-			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I6.jpg"/></a>
+<div class="dut_ligne_case">
+			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I4.jpg"/></a> 
+			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I6.jpg"/></a>
 </div>
-<div class="DUT_MMI_case">
-			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I7.jpg"/></a> 
-			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I8.png"/></a>
-			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I10.jpg"/></a>
+<div class="dut_ligne_case">
+			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I7.jpg"/></a> 
+			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I8.png"/></a>
+			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I10.jpg"/></a>
+</div>
+<div class="dut_ligne_case">
+	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I14.jpg"/></a>
+</div>
+<div class="dut_ligne_case">
+	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I13.jpg"/></a>
+	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I12.jpg"/></a>
+	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I11.jpg"/></a> 
+</div>
+<div class="dut_ligne_case">
+	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I5.jpg"/></a> 
+	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I17.jpg"/></a>
 </div>
 </div>
 
