--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
 				<img class="couverture" src="./RESSOURCES/Couverture_Photographie.jpg"/>
 				<p class="category_title"><span class="contour"> | </span>PHOTOGRAPHIE<span class="contour"> | </span></p>
 			</a>
-			<a class="lien_image" href="/html/dut mmi.html">
+			<a class="lien_image" href="./html/INDEX/jeu_video.html">
 				 <img class="couverture" src="./RESSOURCES/Couverture_Jeu_Vidéo.jpg"/>
 				 <p class="category_title"><span class="contour"> | </span>JEU VIDÉO<span class="contour"> | </span></p>
 			</a>
-			<a class="lien_image" href="./html/photographie.html">
+			<a class="lien_image" href="./html/INDEX/video.html">
 				<img class="couverture" src="./RESSOURCES/Couverture_Vidéo.jpg"/>
 				<p class="category_title"><span class="contour"> | </span>VIDÉOS<span class="contour"> | </span></p>
 			</a>
-			<a class="lien_image" href="/html/dut mmi.html">
+			<a class="lien_image" href="./html/INDEX/web.html">
 				 <img class="couverture" src="./RESSOURCES/Couverture_Web.jpg"/>
 				 <p class="category_title"><span class="contour"> | </span>WEB<span class="contour"> | </span></p>
 			</a>
-			<a class="lien_image" href="/html/dut mmi.html">
+			<a class="lien_image" href="./html/INDEX/ecriture.html">
 				<img class="couverture" src="./RESSOURCES/Couverture_Ecriture.jpg"/>
 				<p class="category_title"><span class="contour"> | </span>ÉCRITURE<span class="contour"> | </span></p>
 		   </a>
