supression dut mmi

--- a/html/INDEX/photographie.html
+++ b/html/INDEX/photographie.html
@@ -26,7 +26,7 @@
 	</div>	
 	<ul>
 		<li><a href="../../index.html">ACCUEIL</a></li>
-		<li><a href="../../html/dut mmi.html">DUT MMI</a></li>
+ 		<!--li><a href="./html/dut mmi.html">DUT MMI</a></li-->
 		<li><a href="../../html/projets perso.html">PROJETS PERSO</a></li>
 	</ul>
 </div>
@@ -39,33 +39,33 @@
 
 <div class="gallerie">
 <div class="dut_ligne_case">
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I1.jpg"/></a> 
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I2.jpg"/></a>
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I16.jpg"/></a>
+			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I1.jpg"/></a> 
+			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I2.jpg"/></a>
+			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I16.jpg"/></a>
 </div>
 <div class="dut_ligne_case">
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I3.jpg"/></a>
+			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I3.jpg"/></a>
 </div>
 <div class="dut_ligne_case">
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I4.jpg"/></a> 
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I6.jpg"/></a>
+			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I4.jpg"/></a> 
+			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I6.jpg"/></a>
 </div>
 <div class="dut_ligne_case">
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I7.jpg"/></a> 
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I8.png"/></a>
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I10.jpg"/></a>
+			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I7.jpg"/></a> 
+			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I8.png"/></a>
+			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I10.jpg"/></a>
 </div>
 <div class="dut_ligne_case">
 	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I14.jpg"/></a>
 </div>
 <div class="dut_ligne_case">
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I13.jpg"/></a>
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I12.jpg"/></a>
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I11.jpg"/></a> 
+	<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I13.jpg"/></a>
+	<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I12.jpg"/></a>
+	<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I11.jpg"/></a> 
 </div>
 <div class="dut_ligne_case">
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I5.jpg"/></a> 
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I17.jpg"/></a>
+	<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I5.jpg"/></a> 
+	<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I17.jpg"/></a>
 </div>
 </div>
 
