--- a/html/presentation.html
+++ b/html/presentation.html
@@ -25,7 +25,7 @@
 	</div>	
 	<ul>
 		<li><a href="../index.html">ACCUEIL</a></li>
-		<li><a href="../html/dut mmi.html">DUT MMI</a></li>
+ 		<!--li><a href="./html/dut mmi.html">DUT MMI</a></li-->
 		<li><a id="page_actuelle" href="../html/presentation.html">PRÉSENTATION</a></li>
 	</ul>
 </div>
@@ -34,31 +34,12 @@
 <div class="presentation_dut_mmi_case">
 	<p class="presentation_text">Actuellement en première année à l'IUT Bordeaux Montaigne, j'étudie pour obtenir un DUT Métiers 
 		du Multimédia et de l'Internet (MMI).</p>
+	<p class="presentation_text">mail : alvinadr24@gmail.com</p>
 	
 	<p class="presentation_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
 		ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
 		ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
 		pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-</div>
-<!--------------------------------------------------- PHOTOGRAPHIES ------------------------------------------------>
-<div class="gallerie">
-<div class="DUT_MMI_case">
-			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="RESSOURCES/0 - Photographies/I1.jpg"/></a> 
-			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="RESSOURCES/0 - Photographies/I2.jpg"/></a>
-			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="RESSOURCES/0 - Photographies/I16.jpg"/></a>
-</div>
-<div class="DUT_MMI_case">
-			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="RESSOURCES/0 - Photographies/I3.jpg"/></a>
-</div>
-<div class="DUT_MMI_case">
-			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="RESSOURCES/0 - Photographies/I4.jpg"/></a> 
-			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="RESSOURCES/0 - Photographies/I6.jpg"/></a>
-</div>
-<div class="DUT_MMI_case">
-			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="RESSOURCES/0 - Photographies/I7.jpg"/></a> 
-			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="RESSOURCES/0 - Photographies/I8.png"/></a>
-			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="RESSOURCES/0 - Photographies/I10.jpg"/></a>
-</div>
 </div>
 
 <!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
