--- a/html/DUT MMI/infographie.html
+++ b/html/DUT MMI/infographie.html
@@ -27,7 +27,7 @@
 	</div>	
 	<ul>
 		<li><a href="../../index.html">ACCUEIL</a></li>
-		 <li><a href="../../html/dut mmi.html">DUT MMI</a></li>
+ 		<!--li><a href="./html/dut mmi.html">DUT MMI</a></li-->
 		 <li><a href="i - projets perso.html">PROJETS PERSO</a></li>
 	</ul>
 </div>
