--- a/html/INDEX/jeu_video.html
+++ b/html/INDEX/jeu_video.html
@@ -9,7 +9,7 @@
 		<title>Alvina Damasio--Razafiarizaka | Projets Perso</title>
 
 		<link rel="stylesheet" href="../../css/style.css" id="theme-link">
-		<link rel="stylesheet" href="../../css/dut mmi.css">
+		<link rel="stylesheet" href="../../css/jeu.css">
 		<link rel="stylesheet" href="../../css/flickity.css">
 
 	    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
@@ -26,49 +26,25 @@
 	</div>	
 	<ul>
 		<li><a href="../../index.html">ACCUEIL</a></li>
-		<li><a href="../../html/dut mmi.html">DUT MMI</a></li>
+ 		<!--li><a href="./html/dut mmi.html">DUT MMI</a></li-->
 		<li><a href="../../html/projets perso.html">PROJETS PERSO</a></li>
 	</ul>
 </div>
+<!------------------------------------------------------ JEU VIDEO ------------------------------------------------------>
 
-
-
-
-<!--------------------------------------------------- PHOTOGRAPHIES ------------------------------------------------>
-<p class="presentation_text">Voilà quelques photos que j'ai prise.</p>
-
-<div class="gallerie">
-<div class="dut_ligne_case">
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I1.jpg"/></a> 
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I2.jpg"/></a>
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I16.jpg"/></a>
-</div>
-<div class="dut_ligne_case">
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I3.jpg"/></a>
-</div>
-<div class="dut_ligne_case">
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I4.jpg"/></a> 
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I6.jpg"/></a>
-</div>
-<div class="dut_ligne_case">
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I7.jpg"/></a> 
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I8.png"/></a>
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I10.jpg"/></a>
-</div>
-<div class="dut_ligne_case">
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I14.jpg"/></a>
-</div>
-<div class="dut_ligne_case">
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I13.jpg"/></a>
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I12.jpg"/></a>
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I11.jpg"/></a> 
-</div>
-<div class="dut_ligne_case">
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I5.jpg"/></a> 
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I17.jpg"/></a>
-</div>
+<div class="presentation_dut_mmi_case">
+	<p class="presentation_text">Ici, vous pourrez retrouver les jeux vidéos (commencés ou finis) dont j'ai contribué à la création.</p>
 </div>
 
+<div class="jeu_total"> 
+    <a class="lien_jeu" href="../DUT MMI/scratch.html">	
+        <img class="jeu_image" src="../../RESSOURCES/2 - Scratch/Ecran titre.jpg" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie."/>
+    </a>
+    <a class="lien_jeu">	
+        <img class="jeu_image" src="../../RESSOURCES/0 - Photomontages/P2.jpg" alt="Photomontage d'un vaisseau en train de s'écraser sur une planète inconnue. Soleil, flammes, sable, violet."/>
+        <p class="date_jeu"><span class="contour"> | </span>Octobre 2018<span class="contour"> | </span></p>
+	</a>
+</div>
 <!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
 <section class="social_menu">
 	<!------------------ ICONES RÉSEAUX -->
