--- a/html/INDEX/photomontage.html
+++ b/html/INDEX/photomontage.html
@@ -26,7 +26,7 @@
 	</div>	
 	<ul>
 		<li><a href="../../index.html">ACCUEIL</a></li>
-		<li><a href="../../html/dut mmi.html">DUT MMI</a></li>
+ 		<!--li><a href="./html/dut mmi.html">DUT MMI</a></li-->
 		<li><a href="../../i - projets perso.html">PROJETS PERSO</a></li>
 	</ul>
 </div>
