--- a/html/INDEX/video.html
+++ b/html/INDEX/video.html
@@ -26,7 +26,7 @@
 	</div>	
 	<ul>
 		<li><a href="../../index.html">ACCUEIL</a></li>
-		<li><a href="../../html/dut mmi.html">DUT MMI</a></li>
+ 		<!--li><a href="./html/dut mmi.html">DUT MMI</a></li-->
 		<link rel="stylesheet" href="../../css/photomontage.css">
 		<li><a href="../../html/projets perso.html">PROJETS PERSO</a></li>
 	</ul>
