--- a/html/dut mmi.html
+++ b/html/dut mmi.html
@@ -66,7 +66,24 @@
 		<a class="dut_projet" href="../html/dut mmi.html">
 			<img class="dut_projet_image" src="../RESSOURCES/Projets MMI - Musique.jpg"/>
 			<p class="DUT_MMI_image_titre"><span class="contour"> | </span>Musique : Lo-fi<span class="contour"> | </span></p>
-	</a>
+		</a>
+	</div>
+	
+	<div class="dut_ligne_case">
+		<a class="dut_projet" href="../html/dut mmi.html">
+			<img class="dut_projet_image" src="../RESSOURCES/Projets MMI - Tech'art.jpg"/>
+			<p class="DUT_MMI_image_titre"><span class="contour"> | </span>Atelier main dans la main<span class="contour"> | </span></p>
+		</a>
+
+		<a class="dut_projet" href="../html/dut mmi.html">
+			<img class="dut_projet_image" src="../RESSOURCES/Projets MMI - TIC.jpg"/>
+			<p class="DUT_MMI_image_titre"><span class="contour"> | </span>Workshop : Class'Code<span class="contour"> | </span></p>
+		</a>
+
+		<a class="dut_projet" href="../html/dut mmi.html">
+			<img class="dut_projet_image" src="../RESSOURCES/Projets MMI - Musique.jpg"/>
+			<p class="DUT_MMI_image_titre"><span class="contour"> | </span>Showtime : Clap aux Fans<span class="contour"> | </span></p>
+		</a>
 	</div>
 
 	<!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
