--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			</div>	
 			<ul>
 				<li><a id="page_actuelle" href="index.html">ACCUEIL</a></li>
- 				<li><a href="./html/dut mmi.html">DUT MMI</a></li>
+ 				<!--li><a href="./html/dut mmi.html">DUT MMI</a></li-->
  				<li><a href="./html/presentation.html">PRÉSENTATION</a></li>
 			</ul>
 		</div>
